--- a/Section_02_Python_Notions_de_Base/02-Les chaines de caractères.ipynb
+++ b/Section_02_Python_Notions_de_Base/02-Les chaines de caractères.ipynb
@@ -977,6 +977,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Autre façon de l'écrire en nommant les paramètres:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"coucou tout le monde c'est pour essayer\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"coucou {a} c'est pour {b}\".format(a=\"tout le monde\",b=\"essayer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Nous reverrons ce sujet sur la présentation dans d'autres sections du cours au fure et à mesure de l'avancement de nos projets !"
    ]
   },
@@ -1005,7 +1032,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
